<resources>
    <string name="app_name">Roll Die</string>
    <string name="edit_message">How many sides?</string>
    <string name="button_send">Roll!</string>
    <string name="primary_text">Enter how many sides you wish to roll</string>
    <string name="re_roll">ROLL</string>
    <string name="results"> </string>
    <string name="results_1"> </string>
    <string name="preset_d6">D6 (6-Sided)</string>
    <string name="preset_d8">D8 (8-Sided)</string>
    <string name="preset_d12">D12 (12-Sided)</string>
    <string name="preset_D20">D20 (20-Sided)</string>
    <string name="quick_roll_text">Quick Roll a Die</string>
    <string name="history_text">History</string>
    <string name="number_dice"># of Dice to Roll</string>
    <string name="advanced_activity">Advanced</string>
    <string name="modifier">Modifier</string>
</resources>
